--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -67,7 +67,7 @@
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
-			<version>0.12.3</version> <!-- Обновлено до последней версии -->
+			<version>0.12.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -93,12 +93,12 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.5.0</version> <!-- Обновлено до последней версии -->
+			<version>1.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.5.0</version> <!-- Обновлено до версии, совместимой с slf4j-api 2.x -->
+			<version>1.5.0</version>
 		</dependency>
 	</dependencies>
 
